# mri-systems

./: BENCHMARK_PLAN.md  EVIDENCE_MAP.md  EXECUTIVE_OVERVIEW.md  MISSION.md  OEM_BRIEF.md  OEM_CASE.md  README.md  ROADMAP.md  SAFETY_AND_REGULATORY.md  STATUS.md  TECHNICAL_EVALUATION_GUIDE.md  THEORY.md  pyproject.toml
claims/: claim_01_multicoil_fusion.md  claim_02_artifact_coherence_mapping.md  claim_03_undersampling_robustness.md  claim_04_motion_orientation_correction.md
docs/: 01_problem.md  01_what_mri_measures.md  02_better_representation.md  02_why_complex_numbers_are_not_enough.md  03_controlled_proof.md  03_quaternionic_upgrade_path.md  04_oem_integration_model.md  04_reproducible_simulation.md  05_integration_path.md  05_validation_metrics.md  06_software_package.md  07_limitations_and_open_questions.md  08_artifact_schema.md  README.md  architecture.md  benchmark_metrics.md  benchmarks.md  index.md  qcsm_model.md  quaternionic_lift.md  regulatory-positioning.md  validation.md  what_mri_measures.md
examples/: README.md  compare_rss_vs_qcsm.py  generate_coherence_map.py  minimal_quaternionic_state.py  phase1_pulse_echo_demo.py
notebooks/: 01_mri_kspace_baseline.ipynb  02_quaternionic_signal_state.ipynb  03_quaternionic_multicoil_fusion.ipynb  04_artifact_reduction_demo.ipynb  04_coherence_defect_map.ipynb  05_undersampling_benchmark.ipynb  README.md
proofs/: coherence_metric_derivation.md  complex_as_fixed_axis_case.md  projection_back_to_complex_kspace.md  quaternionic_coil_state_model.md
simulations/: README.md
tests/: test_coherence.py  (+6 more)
(+33 files in other folders)
